# datamimic

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  local.env.properties  pyproject.toml  sonar-project.properties  test.py  test.xml  test_import.py
.cursor/rules/: best-practice.mdc  coi.mdc  datamimic-rules.mdc  dry.mdc  kiss.mdc  react-rules.mdc  soc.mdc  srp.mdc  techstack.mdc
.github/workflows/: main.yml
datamimic_ce/: __init__.py  cli.py  config.py  data_mimic_test.py  datamimic.py
datamimic_ce/clients/: client.py  database_client.py  mongodb_client.py  rdbms_client.py
datamimic_ce/connection_config/: connection_config_base.py  mongodb_connection_config.py  rdbms_connection_config.py
datamimic_ce/constants/: attribute_constants.py  convention_constants.py  data_type_constants.py  element_constants.py  exporter_constants.py
datamimic_ce/contexts/: context.py  demographic_context.py  geniter_context.py  setup_context.py
datamimic_ce/converter/: append_converter.py  converter.py  converter_util.py  custom_converter.py  cut_length_converter.py  date2timestamp_converter.py  date_format_converter.py  hash_converter.py  java_hash_converter.py  lower_case_converter.py  mask_converter.py  middle_mask_converter.py  remove_none_or_empty_element_converter.py  timestamp2date_converter.py  upper_case_converter.py
datamimic_ce/core/: __init__.py  base_data_loader.py  base_entity.py  class_factory_util.py  interfaces.py
datamimic_ce/credentials/: credential.py  mongodb_credential.py  rdbms_credential.py
datamimic_ce/data_sources/: data_source_pagination.py  data_source_registry.py  data_source_util.py  weighted_data_source.py  weighted_entity_data_source.py
datamimic_ce/demos/: e_commerce_demo.py
datamimic_ce/domain_core/: __init__.py  base_data_loader.py  base_domain_generator.py  base_domain_service.py  base_entity.py  base_literal_generator.py  domain_generator.py  interfaces.py  property_cache.py
datamimic_ce/domains/: README.md  __init__.py  determinism.py  exceptions.py  facade.py  schema_registry.py
datamimic_ce/entities/: address_entity.py  bank_account_entity.py  bank_entity.py  base_data_loader.py  city_entity.py  company_entity.py  country_entity.py  credit_card_entity.py  crm_entity.py  digital_wallet_entity.py  entity.py  entity_util.py  invoice_entity.py  order_entity.py  payment_entity.py  person_entity.py  product_entity.py  property_cache.py  transaction_entity.py  user_account_entity.py
datamimic_ce/enums/: converter_enums.py  faker_enums.py
datamimic_ce/exporters/: console_exporter.py  csv_exporter.py  database_exporter.py  exporter.py  exporter_state_manager.py  exporter_util.py  json_exporter.py  log_exporter.py  memstore.py  mongodb_exporter.py  test_result_exporter.py  txt_exporter.py  unified_buffered_exporter.py  xml_exporter.py
datamimic_ce/factory/: datamimic_test_factory.py  entity_factory.py  factory_config.py
datamimic_ce/generators/: academic_title_generator.py  birthdate_generator.py  boolean_generator.py  business_generators.py  cnpj_generator.py  color_generators.py  company_name_generator.py  cpf_generator.py  data_faker_generator.py  datetime_generator.py  department_name_generator.py  document_generators.py  domain_generator.py  ean_generator.py  email_address_generator.py  family_name_generator.py  float_generator.py  gender_generator.py  generator.py  generator_util.py  given_name_generator.py  healthcare_generators.py  increment_generator.py  integer_generator.py  nobility_title_generator.py  phone_number_generator.py  science_generators.py  sector_generator.py  security_generators.py  sequence_table_generator.py  ssn_generator.py  street_name_generator.py  string_generator.py  text_generators.py  url_generator.py  uuid_generator.py
datamimic_ce/logger/: __init__.py
datamimic_ce/mcp/: __init__.py  cli.py  models.py  resources.py  server.py
datamimic_ce/model/: array_model.py  base_if_else_model.py  condition_model.py  constraints_model.py  database_model.py  demographics_model.py  element_model.py  else_if_model.py  else_model.py  execute_model.py  generate_model.py  generator_model.py  if_model.py  include_model.py  item_model.py  key_model.py  list_model.py  mapping_model.py  memstore_model.py  ml_train_model.py  model_util.py  mongodb_model.py  nested_key_model.py  reference_model.py  rule_model.py  setup_model.py  source_constraints_model.py  target_constraints_model.py  variable_model.py
datamimic_ce/parsers/: array_parser.py  condition_parser.py  constraints_parser.py  database_parser.py  demographics_parser.py  descriptor_parser.py  echo_parser.py  element_parser.py  else_if_parser.py  else_parser.py  execute_parser.py  generate_parser.py  generator_parser.py  if_else_base_parser.py  if_parser.py  include_parser.py  item_parser.py  key_parser.py  list_parser.py  mapping_parser.py  memstore_parser.py  ml_train_parser.py  mongodb_parser.py  nested_key_parser.py  parser_util.py  reference_parser.py  rule_parser.py  setup_parser.py  source_constraints_parser.py  statement_parser.py  target_constraints_parser.py  variable_parser.py
datamimic_ce/product_storage/: memstore_manager.py
datamimic_ce/services/: data_transformation_service.py  rule_execution_service.py
datamimic_ce/statements/: array_statement.py  composite_statement.py  condition_statement.py  constraints_statement.py  database_statement.py  demographics_statement.py  echo_statement.py  element_statement.py  else_if_statement.py  else_statement.py  execute_statement.py  generate_statement.py  generator_statement.py  if_statement.py  include_statement.py  item_statement.py  key_statement.py  list_statement.py  mapping_statement.py  memstore_statement.py  ml_train_statement.py  statement.py  (+9 more)
docs/: README.md  constraints_workflow.md  demographics.md  developer_guide.md  generator_lifecycle.md  mcp_quickstart.md  release-notes.md
examples/: call_generate.py  call_list_domains.py  constraints_workflow.xml
tests/: test_refactoring.py
tests_ce/: conftest.py
(+2395 files in other folders)
